# bbr-demolitions

./: .gitignore  README.md  pyproject.toml
dataset/: SOURCES.md
docs/: ablation.md  analysis_filters.md  cleaning.md  data_quality_report.md  indicators.md  methodology.md  paper.md  plan.md
manuscript_overleaf/: highlights.tex  main.tex  references.bib
manuscript_overleaf/sections/: bbr.tex  conclusion.tex  data.tex  declarations.tex  discussion.tex  indicators.tex  introduction.tex  methods.tex  results.tex
results/: ablation_summary.csv  annual.csv  by_region.csv  cleaning_report.csv  data_quality_area_by_use.csv  data_quality_area_consistency.csv  data_quality_area_fields.csv  data_quality_critical_missingness.csv  data_quality_dataset_summary.csv  demolition_rates_by_use_code.csv  discontinued_axis_summary.csv  discontinued_code_transition_pairs.csv  discontinued_code_transition_years.csv  discontinued_rates_by_use_code.csv  kmd_comparison.csv  kmd_disagreement_profile.csv  latest_discontinued_sensitivity.csv  overlap.csv  overlap_2018_2025.csv  rates_annual.csv  rates_spread.csv  rates_summary.csv  stock_national.csv
src/: ablation.py  build_dataset.py  data_quality.py  discontinued_analysis.py  indicators.py  kmd_comparison.py  plotting.py  rates.py
src/cleaning/: __init__.py  classifications.py  clean_temporal_bbr.py  entity_specs.py  temporal_cleaner.py
tests/: test_data_quality.py  test_temporal_cleaner.py
