[project]
name = "bbr-demolitions"
version = "0.1.0"
description = "Ablation study of demolition indicators in the Danish Building Register (BBR)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.0",
    "polars>=1.42.1",
    "pyarrow>=25.0.0",
    "seaborn>=0.13.2",
]
